added dts filling